--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -11,9 +11,9 @@
 <div class="container-fluid my-4">
     <div class="card w-100">
         <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
-        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-        Cursos
-    </div>
+            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            Cursos
+        </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table id="tabla-curso" class="table table-striped tabla-cursos" style="width:100% ">
@@ -27,11 +27,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        
+
                     </tbody>
                 </table>
             </div>
-            
+
         </div>
     </div>
 </div>
@@ -78,11 +78,13 @@
                     </div>
                     <div class="mb-3">
                         <label for="horasTeoriaCurso" class="form-label">Horas Teoría:</label>
-                        <input type="number" class="form-control" id="horasTeoriaCurso" name="horasTeoriaCurso" required>
+                        <input type="number" class="form-control" id="horasTeoriaCurso" name="horasTeoriaCurso"
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="horasPracticaCurso" class="form-label">Horas Práctica:</label>
-                        <input type="number" class="form-control" id="horasPracticaCurso" name="horasPracticaCurso" required>
+                        <input type="number" class="form-control" id="horasPracticaCurso" name="horasPracticaCurso"
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="cicloCurso" class="form-label">Ciclo:</label>
@@ -135,15 +137,18 @@
                     </div>
                     <div class="mb-3">
                         <label for="creditosCursoMod" class="form-label">Créditos:</label>
-                        <input type="number" class="form-control" id="creditosCursoMod" name="creditosCursoMod" required>
+                        <input type="number" class="form-control" id="creditosCursoMod" name="creditosCursoMod"
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="horasTeoriaCursoMod" class="form-label">Horas Teoría:</label>
-                        <input type="number" class="form-control" id="horasTeoriaCursoMod" name="horasTeoriaCursoMod" required>
+                        <input type="number" class="form-control" id="horasTeoriaCursoMod" name="horasTeoriaCursoMod"
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="horasPracticaCursoMod" class="form-label">Horas Práctica:</label>
-                        <input type="number" class="form-control" id="horasPracticaCursoMod" name="horasPracticaCursoMod" required>
+                        <input type="number" class="form-control" id="horasPracticaCursoMod"
+                            name="horasPracticaCursoMod" required>
                     </div>
                     <div class="mb-3">
                         <label for="cicloCursoMod" class="form-label">Ciclo:</label>
@@ -193,6 +198,10 @@
                         <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx"
                             required>
                     </div>
+                    <div class="progress mb-3" style="height: 25px;">
+                        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;"
+                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                    </div>
                     <button type="submit" class="btn btn-primary">Subir</button>
                 </form>
             </div>
@@ -202,47 +211,50 @@
 
 
 <script>
+    function updateProgressBar(percentage) {
+        var progressBar = document.getElementById('progressBar');
+        progressBar.style.width = percentage + '%';
+        progressBar.setAttribute('aria-valuenow', percentage);
+        progressBar.innerText = percentage + '%';
+    }
+
     function descargarPlantilla() {
-    const workbook = new ExcelJS.Workbook();
-    const worksheet = workbook.addWorksheet('Plantilla');
+        const workbook = new ExcelJS.Workbook();
+        const worksheet = workbook.addWorksheet('Plantilla');
 
-    // Añadir el título
-    const titleRow = worksheet.addRow(['USAT - Cursos']);
-    worksheet.mergeCells('A1', 'G1');
-    titleRow.font = { bold: true, size: 14 };
-    titleRow.alignment = { horizontal: 'center', vertical: 'middle' };
-    worksheet.getRow(1).height = 20;
+        // Añadir el título
+        const titleRow = worksheet.addRow(['USAT - Cursos']);
+        worksheet.mergeCells('A1', 'H1');
+        titleRow.font = { bold: true, size: 14 };
+        titleRow.alignment = { horizontal: 'center', vertical: 'middle' };
+        worksheet.getRow(1).height = 20;
 
-    // Añadir las cabeceras
-    const headerRow = worksheet.addRow(['Nombre', 'Código', 'Créditos', 'Horas Teoría', 'Horas Práctica', 'Ciclo', 'Tipo Curso', 'Plan de Estudio']);
-    headerRow.font = { bold: false };
-    headerRow.alignment = { horizontal: 'center', vertical: 'middle' };
+        // Añadir las cabeceras
+        const headerRow = worksheet.addRow(['Nombre', 'Código', 'Créditos', 'Horas Teoría', 'Horas Práctica', 'Ciclo', 'Tipo Curso', 'Plan de Estudio']);
+        headerRow.font = { bold: true };
+        headerRow.alignment = { horizontal: 'center', vertical: 'middle' };
 
-    // Ajustar el ancho de las columnas
-    worksheet.columns = [
-        { key: 'nombre', width: 20 },
-        { key: 'codigo', width: 10 },
-        { key: 'creditos', width: 10 },
-        { key: 'horas_teoria', width: 15 },
-        { key: 'horas_practica', width: 15 },
-        { key: 'ciclo', width: 10 },
-        { key: 'tipo_curso', width: 15 },
-        { key: 'plan_estudio', width: 15 }
-    ];
+        // Ajustar el ancho de las columnas
+        worksheet.columns = [
+            { key: 'nombre', width: 20 },
+            { key: 'codigo', width: 10 },
+            { key: 'creditos', width: 10 },
+            { key: 'horas_teoria', width: 15 },
+            { key: 'horas_practica', width: 15 },
+            { key: 'ciclo', width: 10 },
+            { key: 'tipo_curso', width: 15 },
+            { key: 'id_plan_estudio', width: 20 }
+        ];
 
-    // Generar y guardar el archivo
-    workbook.xlsx.writeBuffer().then(function (buffer) {
-        saveAs(new Blob([buffer], { type: 'application/octet-stream' }), 'USAT_Cursos_Plantilla.xlsx');
-    });
-}
+        // Generar y guardar el archivo
+        workbook.xlsx.writeBuffer().then(function (buffer) {
+            saveAs(new Blob([buffer], { type: 'application/octet-stream' }), 'USAT_Cursos_Plantilla.xlsx');
+        });
+    }
 
-</script>
-
-<script>
     $(document).ready(function () {
         var cursos = [];
-        var planEstudioMap = {}; 
-
+        var planEstudioMap = {};
         function cargarPlanesDeEstudio(selectElementId, selectedValue = null) {
             $.ajax({
                 url: '/obtener_planes_estudio',
@@ -273,7 +285,7 @@
             });
         }
 
-        function initializeDataTable(){
+        function initializeDataTable() {
             var table = $('#tabla-curso').DataTable({
                 paging: false,
                 info: false,
@@ -281,7 +293,7 @@
                 autoWidth: true,
                 searching: true,
                 scrollY: "510px",
-                order: [], 
+                order: [],
                 dom: 'Bfrtip',
                 buttons: [
                     {
@@ -338,7 +350,7 @@
                                 className: 'dropdown-item'
                             }
                         ]
-                    }, 
+                    },
                     {
                         text: '<i class="fas fa-plus"></i> Agregar Nuevo Curso',
                         className: 'btn_agregar_curso',
@@ -350,34 +362,35 @@
                         }
                     }
                 ],
-                "ajax": {
-                    "url": "/datos_cursos", // Asegúrate de que esta URL es correcta
-                    "type": "GET",
-                    "dataSrc": "" // Ajusta esto según el formato de los datos devueltos por tu servidor
+                ajax: {
+                    url: "/datos_cursos",
+                    type: "GET",
+                    dataSrc: ""
                 },
-                "processing": true,
-                "serverSide": false, // Desactiva la recarga automática al ordenar
-                "columns": [
-                    { "data": "nombre" },
-                    { "data": "ciclo", "className": 'dt-body-center' },
-                    { "data": "tipo_curso", "className": 'dt-body-center'},
-                    { "data": "nombre_plan_estudio", "className": 'dt-body-center' },
+                processing: true,
+                serverSide: false,
+                columns: [
+                    { data: "nombre" },
+                    { data: "ciclo", className: 'dt-body-center' },
+                    { data: "tipo_curso", className: 'dt-body-center' },
+                    { data: "nombre_plan_estudio", className: 'dt-body-center' },
                     {
-                        "data": null,
-                        "render": function (data, type, row) {
+                        data: null,
+                        render: function (data, type, row) {
                             return `
-                            <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}" title="Ver"><i class="fas fa-eye"></i></button>
-                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
-                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}" title="Eliminar"><i class="fas fa-times"></i></button>
-                        `;
+                                <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}" title="Ver"><i class="fas fa-eye"></i></button>
+                                <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
+                                <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}" title="Eliminar"><i class="fas fa-times"></i></button>
+                                <button class="btn btn-secondary btn-sm btnDarDeBaja" data-id="${row.idcurso}" title="Dar de Baja"><i class="fas fa-arrow-down"></i></button>
+                            `;
                         }
                     }
                 ],
-                
-                "language": {
-                    "url": "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
                 }
             });
+
             $('#search_box').on('keyup', function () {
                 table.search(this.value).draw();
             });
@@ -441,63 +454,64 @@
             e.preventDefault();
             var fileInput = document.getElementById('archivo');
             var file = fileInput.files[0];
-            var reader = new FileReader();
+            updateProgressBar(0);
+            procesarArchivo(file);
+        });
 
-            reader.onload = function (e) {
+        async function procesarArchivo(file) {
+            var reader = new FileReader();
+            reader.onload = async function (e) {
+
                 var data = new Uint8Array(e.target.result);
                 var workbook = XLSX.read(data, { type: 'array' });
                 var firstSheetName = workbook.SheetNames[0];
                 var worksheet = workbook.Sheets[firstSheetName];
                 var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
 
-                var headers = jsonData[1];  
-                var rows = jsonData.slice(2); 
+                var headers = jsonData[1];
+                var rows = jsonData.slice(2);
 
-                var formattedData = rows.map((row, index) => {
+                var formattedData = await Promise.all(rows.map(async (row, index) => {
                     var planEstudioNombre = row[headers.indexOf("Plan de Estudio")];
                     var idPlanEstudio = planEstudioMap[planEstudioNombre] || null;
+                    updateProgressBar(Math.round((index + 1) / rows.length * 100)); // Actualizar barra de progreso
                     return {
                         nombre: row[headers.indexOf("Nombre")],
-                        codigo: row[headers.indexOf("Código")],
+                        cod_curso: row[headers.indexOf("Código")],
                         creditos: row[headers.indexOf("Créditos")],
                         horas_teoria: row[headers.indexOf("Horas Teoría")],
                         horas_practica: row[headers.indexOf("Horas Práctica")],
                         ciclo: row[headers.indexOf("Ciclo")],
                         tipo_curso: row[headers.indexOf("Tipo Curso")] === 'Presencial' ? 0 : 1,
-                        estado: "A", // Asumiendo que todos están en estado "A"
-                        idcurso: index + 1, // Generando un ID secuencial
+                        estado: "A",
                         id_plan_estudio: idPlanEstudio
-                        
-                        
                     };
+                }));
+
+                console.log(JSON.stringify(formattedData, null, 2)); // Visualizar los datos en forma de JSON en la consola
+
+                $.ajax({
+                    url: '/asignar_cursos_excel',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(formattedData),
+                    success: function (response) {
+                        if (response.error) {
+                            Swal.fire('Error', response.error, 'error');
+                        } else {
+                            Swal.fire('Éxito', 'La subida masiva se realizó correctamente.', 'success');
+                            table.ajax.reload();
+                            $('#modalSubidaMasiva').modal('hide');
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        Swal.fire('Error', 'Hubo un error al realizar la operación.', 'error');
+                    }
                 });
 
-                console.log(JSON.stringify(formattedData, null, 2));
             };
-
-             
-             /* $.ajax({
-                url: '/agrega_curso_excel',
-                type: 'POST',
-                contentType: 'application/json',
-                data: JSON.stringify(formattedData),
-                success: function (response) {
-                    if (response.error) {
-                        Swal.fire('Error', response.error, 'error');
-                    } else {
-                        Swal.fire('Éxito', 'La subida masiva se realizó correctamente.', 'success');
-                        table.ajax.reload();
-                        $('#modalSubidaMasiva').modal('hide');
-                    }
-                },
-                error: function (xhr, status, error) {
-                    Swal.fire('Error', 'Hubo un error al realizar la operación.', 'error');
-                }
-            }); */
-
             reader.readAsArrayBuffer(file);
-        });
-
+        }
 
         $('#formAgregarCurso').submit(function (e) {
             e.preventDefault();
@@ -552,7 +566,6 @@
                         contentType: 'application/json',
                         data: JSON.stringify({ idcurso: id }),
                         success: function (response) {
-                            console.log(response);
                             if (response.error) {
                                 Swal.fire('Error', response.error, 'error');
                             } else {
@@ -615,7 +628,6 @@
                 contentType: 'application/json',
                 data: JSON.stringify(data),
                 success: function (response) {
-                    console.log(response);
                     if (response.error) {
                         Swal.fire('Error', response.error, 'error');
                     } else {
@@ -629,6 +641,40 @@
                 }
             });
         });
+
+        $('#tabla-curso tbody').on('click', '.btnDarDeBaja', function () {
+            var id = $(this).data('id');
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "No podrás revertir esta acción.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, dar de baja!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '/dar_baja_curso',
+                        type: 'POST',
+                        contentType: 'application/json',
+                        data: JSON.stringify({ idcurso: id }),
+                        success: function (response) {
+                            if (response.error) {
+                                mostrarAlerta('error', 'Error', response.error);
+                            } else {
+                                mostrarAlerta('success', 'Éxito', 'La operación se realizó correctamente.');
+                                table.ajax.reload();
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            mostrarAlerta('error', 'Error', 'Hubo un error al realizar la operación.');
+                        }
+                    });
+                }
+            });
+        });
     });
 </script>
+
 {% endblock %}
