--- a/templates/dashboard/docentexcurso.html
+++ b/templates/dashboard/docentexcurso.html
@@ -1,10 +1,11 @@
 {% extends "dashboard/index.html" %}
 {% block titulo %} Docente por Cursos {% endblock %}
 {% block contenido %}
-<nav style="--bs-breadcrumb-divider: '>" aria-label="breadcrumb">
+<nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Inicio</a></li>
-        <li class="breadcrumb-item active"><a href="{{ url_for('docentesxcursos') }}">Asignar Docentes por Cursos</a></li>
+        <li class="breadcrumb-item active"><a href="{{ url_for('docentesxcursos') }}">Asignar Docentes por Cursos</a>
+        </li>
     </ol>
 </nav>
 
@@ -33,7 +34,8 @@
 </div>
 
 <!-- Modal para la subida masiva de datos -->
-<div class="modal fade" id="modalSubidaMasiva" tabindex="-1" aria-labelledby="modalSubidaMasivaLabel" aria-hidden="true">
+<div class="modal fade" id="modalSubidaMasiva" tabindex="-1" aria-labelledby="modalSubidaMasivaLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -44,10 +46,12 @@
                 <form id="formSubidaMasiva" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="archivo" class="form-label">Seleccionar archivo (Excel):</label>
-                        <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx" required>
+                        <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx"
+                            required>
                     </div>
                     <div class="progress mb-3" style="height: 25px;">
-                        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;"
+                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                     </div>
                     <button type="submit" class="btn btn-primary">Subir</button>
                 </form>
@@ -74,7 +78,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table id="tabla-curso" class="table table-striped table-bordered" style="width:100%">
+                                    <table id="tabla-curso" class="table table-striped table-bordered"
+                                        style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th style="width:40%; text-align:center;">Nombre del Curso</th>
@@ -97,7 +102,8 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table id="tabla-docente" class="table table-striped table-bordered" style="width:100%">
+                                    <table id="tabla-docente" class="table table-striped table-bordered"
+                                        style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th style="width:5%; text-align:center;">
@@ -120,7 +126,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" id="guardarAsignacion" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
+                <button type="button" id="guardarAsignacion" class="btn btn-primary"
+                    data-bs-dismiss="modal">Guardar</button>
             </div>
         </div>
     </div>
@@ -184,7 +191,7 @@
                     "render": function (data, type, row) {
                         return `
                     <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="btn btn-danger btn-sm btnEliminar" data-iddocente="${row.idpersona}" data-idcurso="${row.idcurso}" data-nombreAmbiente="${row.nombreAmbiente}" data-nombreCurso="${row.nombreCurso}" title="Eliminar"><i class="fas fa-times"></i></button>
+                    <button class="btn btn-danger btn-sm btnEliminar" data-iddocente="${row.idpersona}" data-idcurso="${row.idcurso}" data-nombreDocente="${row.nombreDocente}" data-nombreCurso="${row.nombreCurso}" title="Eliminar"><i class="fas fa-times"></i></button>
                 `;
                     }
                 }
@@ -513,37 +520,51 @@
         // Manejar la eliminación de un curso y ambiente
         $('#tabla-cursoxdocentes tbody').on('click', '.btnEliminar', function () {
             var idcurso = $(this).data('idcurso');
-            var idpersona = $(this).data('idpersona');
+            var idpersona = $(this).data('iddocente');
             var nombreCurso = $(this).data('nombrecurso');
             var nombreDocente = $(this).data('nombredocente');
+            console.log(idcurso, idpersona, nombreCurso, nombreDocente);
 
-            if (confirm(`¿Seguro que quieres eliminar la asignación del curso: ${nombreCurso} con el docente: ${nombreDocente}?`)) {
-                if (idcurso && idpersona) {
-                    $.ajax({
-                        url: '/eliminar_cursoDocente',
-                        type: 'POST',
-                        contentType: 'application/json',
-                        data: JSON.stringify({ idcurso: idcurso, idpersona: idpersona }),
-                        success: function (response) {
-                            console.log(response);
-                            $('#mensajeResultado').removeClass().empty();
-                            if (response.error) {
-                                $('#mensajeResultado').addClass('alert alert-danger').text('Error: ' + response.error);
-                            } else {
-                                $('#mensajeResultado').addClass('alert alert-success').text('Asignación eliminada correctamente');
-                                table.ajax.reload(); // Recargar la tabla con AJAX
+            Swal.fire({
+                title: `¿Seguro que quieres eliminar la asignación del curso: ${nombreCurso} con el docente: ${nombreDocente}?`,
+                text: "Esta acción no se puede revertir.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, eliminarlo!',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    if (idcurso && idpersona) {
+                        $.ajax({
+                            url: '/eliminar_cursoDocente',
+                            type: 'POST',
+                            contentType: 'application/json',
+                            data: JSON.stringify({ idcurso: idcurso, idpersona: idpersona }),
+                            success: function (response) {
+                                console.log(response);
+                                if (response.error) {
+                                    Swal.fire('Error', response.error, 'error');
+                                } else {
+                                    Swal.fire('Éxito', 'Asignación eliminada correctamente.', 'success');
+                                    table.ajax.reload(); // Recargar la tabla con AJAX
+                                }
+                            },
+                            error: function (xhr, status, error) {
+                                console.log(error);
                             }
-                            $('#mensajeResultado').show();
-                        },
-                        error: function (xhr, status, error) {
-                            console.log(error);
-                        }
-                    });
-                } else {
-                    console.log('ID de curso o docente no definido');
+                        });
+                    } else {
+                        console.log('ID de curso o docente no definido');
+                    }
                 }
-            }
+
+            });
+
+
         });
     });
+
 </script>
 {% endblock %}
