--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -164,10 +164,30 @@
             })
             .then(response => response.json())
             .then(data => {
-                alert(data.mensaje); 
+                if (data) {
+                    Swal.fire({
+                        title: 'Éxito',
+                        text: data.message,
+                        icon: 'success',
+                        confirmButtonText: 'OK'
+                    }).then(() => {
+                    });
+                } else {
+                    Swal.fire({
+                        title: 'Error',
+                        text: data.message,
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    });
+                }
             })
             .catch(error => {
-                console.error('Error al obtener los datos de la tabla:', error);
+                Swal.fire({
+                    title: 'Error',
+                    text: 'Hubo un error al modificar los grupos',
+                    icon: 'error',
+                    confirmButtonText: 'OK'
+                });
             });
         }        
         window.seleccionar_toda = function() {
@@ -222,13 +242,9 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     rellenarTabla(escuela, semestre);
-                } else {
-                    console.log("Acción cancelada por el usuario.");
-                }
+                } 
             });
         }
-        
-    
     window.validar = function() {
             var semestre = document.getElementById('semestre');
             var escuela = document.getElementById('escuela');
