--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -214,11 +214,11 @@
                         ]
                     },
                     {
-                        text: '<i class="fas fa-plus"></i> Agregar Nuevo Ambiente',
+                        text: '<i class="fas fa-plus"></i> Agregar Nueva Disponibilidad',
                         className: 'btn_agregar_ambiente',
                         action: function (e) {
                             e.preventDefault();
-                            $('#modalAmbienteLabel').text('Agregar Ambiente');
+                            $('#modalAmbienteLabel').text('Agregar Nueva Disponibilidad');
                             $('#formAmbiente')[0].reset();
                             $('#idAmbiente').val('');
                             $('#modalAmbiente').modal('show');
