--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -33,14 +33,14 @@
             </div>
 
             <div class="card-body show">
-                <table id="tabla-grupo" class="table table-striped" style="width:100%">
+                <table id="tabla-grupo" class="table table-striped tabla-cursos" style="width:100%">
                     <thead>
                         <tr>
-                            <th style="width: 15%; text-align: center">Nombre</th>
-                            <th style="width: 10%; text-align: center">Vacantes</th>
-                            <th style="width: 60%; text-align: center">Curso</th>
-                            <th style="width: 5%; text-align: center">Semestre</th>
-                            <th style="width: 30%; text-align: center">Opciones</th>
+                            <th style="text-align: center">Nombre</th>
+                            <th style="text-align: center">Vacantes</th>
+                            <th style="text-align: center">Curso</th>
+                            <th style="text-align: center">Semestre</th>
+                            <th style="text-align: center">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -97,9 +97,12 @@
         var grupos = [];
         var cursos = [];
         var table = $('#tabla-grupo').DataTable({
-            "paging": true,
+            "paging": false,
             "info": true,
+            "responsive": true,
+            "autoWidth": true,
             "stateSave": true,
+            "scrollY": "510px",
             "columns": [
                 { "data": "nombre", "className": 'dt-body-center' },
                 { "data": "vacantes", "className": 'dt-body-center' },
