--- a/templates/dashboard/docentes.html
+++ b/templates/dashboard/docentes.html
@@ -20,7 +20,6 @@
                  <table id="tabla-docente" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
-                            <th style="width: 10%; text-align:center">ID</th>
                             <th style="width: 40%; text-align:center">Nombres</th>
                             <th style="width: 15%; text-align:center">Correo</th>
                             <th style="width: 15%; text-align:center">Teléfono</th>
@@ -307,15 +306,14 @@
                     }
                 ],
                 ajax: {
-                    url: "/get_docentes",
+                    url: "/datos_docentes",
                     type: "GET",
                     dataSrc: ""
                 },
                 processing: true,
                 serverSide: false,
                 columns: [
-                    { data: "idpersona", className: 'dt-body-center' },
-                    { data: "nombre" },
+                    { data: "docente" },
                     { data: "correo" },
                     { data: "telefono", className: 'dt-body-center' },
                     {
