--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -22,6 +22,7 @@
                             <th style=" text-align:center;">Nombre Curso</th>
                             <th style=" text-align:center;">Ciclo</th>
                             <th style=" text-align:center;">Tipo Curso</th>
+                            <th style=" text-align:center;">Estado</th>
                             <th style=" text-align:center;">Plan de Estudio</th>
                             <th style=" text-align:center;">Opciones</th>
                         </tr>
@@ -255,6 +256,8 @@
     $(document).ready(function () {
         var cursos = [];
         var planEstudioMap = {};
+        var table; // Mueve la declaración de la variable table aquí para que sea accesible globalmente
+
         function cargarPlanesDeEstudio(selectElementId, selectedValue = null) {
             $.ajax({
                 url: '/obtener_planes_estudio',
@@ -274,7 +277,6 @@
                         return acc;
                     }, {});
 
-
                     if (selectedValue) {
                         select.val(selectedValue);
                     }
@@ -285,8 +287,14 @@
             });
         }
 
+        if ($.fn.DataTable.isDataTable('#tabla-curso')) {
+            table = $('#tabla-curso').DataTable();
+        } else {
+            table = initializeDataTable();
+        }
+
         function initializeDataTable() {
-            var table = $('#tabla-curso').DataTable({
+            return $('#tabla-curso').DataTable({
                 paging: false,
                 info: false,
                 responsive: true,
@@ -373,15 +381,23 @@
                     { data: "nombre" },
                     { data: "ciclo", className: 'dt-body-center' },
                     { data: "tipo_curso", className: 'dt-body-center' },
+                    {
+                        "data": "estado", "className": 'dt-body-center',
+                        "render": function (data, type, row) {
+                            return data === 'A' ? 'ACTIVO' : data === 'I' ? 'INACTIVO' : data;
+                        }
+                    },
                     { data: "nombre_plan_estudio", className: 'dt-body-center' },
                     {
                         data: null, className: 'dt-body-center',
                         render: function (data, type, row) {
+                            var darDeBajaIcono = row.estado === 'A' ? 'fas fa-arrow-down' : 'fas fa-arrow-up';
+                            var darDeBajaTitulo = row.estado === 'A' ? 'Dar de Baja' : 'Activar';
                             return `
                                 <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}" title="Ver"><i class="fas fa-eye"></i></button>
                                 <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
                                 <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}" title="Eliminar"><i class="fas fa-times"></i></button>
-                                <button class="btn btn-secondary btn-sm btnDarDeBaja" data-id="${row.idcurso}" title="Dar de Baja"><i class="fas fa-arrow-down"></i></button>
+                                <button class="btn btn-secondary btn-sm btnCambiarEstado" data-id="${row.idcurso}" title="${darDeBajaTitulo}"><i class="${darDeBajaIcono}"></i></button>
                             `;
                         }
                     }
@@ -390,21 +406,11 @@
                     url: "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
                 }
             });
-
-            $('#search_box').on('keyup', function () {
-                table.search(this.value).draw();
-            });
-
-            return table;
         }
 
-        var table;
-        if ($.fn.DataTable.isDataTable('#tabla-curso')) {
-            table = $('#tabla-curso').DataTable();
-            table.ajax.reload();
-        } else {
-            table = initializeDataTable();
-        }
+        $('#search_box').on('keyup', function () {
+            table.search(this.value).draw();
+        });
 
         cargarPlanesDeEstudio();
 
@@ -461,7 +467,6 @@
         async function procesarArchivo(file) {
             var reader = new FileReader();
             reader.onload = async function (e) {
-
                 var data = new Uint8Array(e.target.result);
                 var workbook = XLSX.read(data, { type: 'array' });
                 var firstSheetName = workbook.SheetNames[0];
@@ -488,8 +493,6 @@
                     };
                 }));
 
-                console.log(JSON.stringify(formattedData, null, 2)); // Visualizar los datos en forma de JSON en la consola
-
                 $.ajax({
                     url: '/asignar_cursos_excel',
                     type: 'POST',
@@ -508,7 +511,6 @@
                         Swal.fire('Error', 'Hubo un error al realizar la operación.', 'error');
                     }
                 });
-
             };
             reader.readAsArrayBuffer(file);
         }
@@ -557,7 +559,8 @@
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, eliminarlo!'
+                confirmButtonText: 'Sí, eliminarlo!',
+                cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
                     $.ajax({
@@ -642,39 +645,52 @@
             });
         });
 
-        $('#tabla-curso tbody').on('click', '.btnDarDeBaja', function () {
+        // Función para cambiar el estado del curso
+        function cambiarEstadoCurso(id, estadoActual) {
+            var nuevoEstado = estadoActual === 'A' ? 'I' : 'A';
+            $.ajax({
+                url: '/curso_estado',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ idcurso: id, estado: nuevoEstado }),
+                success: function (response) {
+                    if (response.error) {
+                        Swal.fire('Error', response.error, 'error');
+                    } else {
+                        Swal.fire('Éxito', 'El estado del curso ha sido actualizado.', 'success');
+                        table.ajax.reload(function (json) {
+                            console.log('Datos recargados después de la actualización:', json);
+                        }, false); // Recargar la tabla sin restablecer la paginación
+                    }
+                },
+                error: function (xhr, status, error) {
+                    Swal.fire('Error', 'Hubo un error al cambiar el estado del curso', 'error');
+                }
+            });
+        }
+
+        // Evento para cambiar el estado del curso
+        $('#tabla-curso tbody').on('click', '.btnCambiarEstado', function () {
             var id = $(this).data('id');
+            var estadoActual = $(this).attr('title') === 'Dar de Baja' ? 'A' : 'I';
+
             Swal.fire({
-                title: '¿Estás seguro?',
-                text: "No podrás revertir esta acción.",
+                title: `¿Seguro que quieres ${estadoActual === 'A' ? 'dar de baja' : 'activar'} este curso?`,
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, dar de baja!'
+                confirmButtonText: `Sí, ${estadoActual === 'A' ? 'dar de baja' : 'activar'}!`,
+                cancelButtonText: 'Cancelar'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    $.ajax({
-                        url: '/dar_baja_curso',
-                        type: 'POST',
-                        contentType: 'application/json',
-                        data: JSON.stringify({ idcurso: id }),
-                        success: function (response) {
-                            if (response.error) {
-                                mostrarAlerta('error', 'Error', response.error);
-                            } else {
-                                mostrarAlerta('success', 'Éxito', 'La operación se realizó correctamente.');
-                                table.ajax.reload();
-                            }
-                        },
-                        error: function (xhr, status, error) {
-                            mostrarAlerta('error', 'Error', 'Hubo un error al realizar la operación.');
-                        }
-                    });
+                    cambiarEstadoCurso(id, estadoActual);
                 }
             });
         });
+
     });
 </script>
+
 
 {% endblock %}
